--- a/profile/src/index.html
+++ b/profile/src/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>Mi Servicio En linea</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="https://miservicioenlinea.com/assets/images/logo.jpeg" />
   <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
